styles/style.css
/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
/* !Base Styles. */
/* ~Body General Styles */ 
body{
    font-family: "louize", "Georgia", "Times", "Times New Roman", serif;    
    color: white;
    background-color: #003a6f;
    margin: 0;
}

/* ~Header*/
/* ^Main Container */
header{
    height: 3.2vh;
    margin: 4vh 0;
    padding: 0;
    display: flex;
    justify-content: space-between;
    color: #f8f8f8;
}

/* ^Content */
header>div{
    display: flex;
}

.media-branding-nav{
    display: none;
}

.branding-nav{
    margin-left: 1.65vw;
}


.branding-nav svg{
    width: 21.3vh;
}
nav{
    font-size: 0.96rem;
    margin-left: 2.2vw;
}

nav ul{
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
}

nav li{
    margin: 0 1.87vw 0 0;
    align-content: center;
    cursor: pointer;
    transition: color 0.4s;
}

nav li:nth-child(1):hover{
    color: #FFB755;
}

nav li:nth-child(2):hover{
    color: #A3FF55;
}

nav li:nth-child(3):hover{
    color: #55FFD1;
}

nav li:nth-child(4):hover{
    color: #55D8FF;
}

nav li:nth-child(5):hover{
    color: #9655FF;
}

.header-moons{
    margin-right: 1.4vw;
    height: 100%;
}

/* ~Header*/
/* ^Initial Banner */

/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
/* ! width 899px Styles. */
/* ~Header*/
@media (max-width: 899px){
    /* ^Display In Elements */
    .branding-nav{
        display: block;
    }
    nav{
        display: none;
    }

    /* ^Main Container */
    header{
        height: auto;
        margin-top: 2.1vh;
        padding: 0;
        display: grid;
        grid-template-columns: repeat(3, 32.6vw);
        grid-row: auto auto;
        justify-content: center;
        align-items: flex-start;
        justify-items: center;
        font-size: 0.91rem;
        font-weight: 400;
    }

    /* ^Content */
    header a{
        color: #f8f8f8;
        text-decoration: none;
    }
    
    header div{
        margin: 0;
        padding: 0;
    }

    header .media-branding-nav:first-child{
        justify-self: flex-start;
        margin-left: 2vw;
    }

    header div:nth-child(3){
        justify-self: flex-end;
        margin-right: 2vw;
    }

    .media-branding-nav{
        display: block;
        cursor: pointer;
    }   

    .media-branding-nav li{
        list-style: none;
    }

    .header-moons{
        grid-column: 2;
        padding: 0;
        margin: 0;
        display: flex;
        justify-content: center;
    }

    .header-moons img{
        width: 115px;
        height: 17px;
        margin-top: 1vw;
    }

    .branding-nav{
        margin: 0;
        padding: 0;
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .branding-nav svg{
        width: 18.8vh;
    }
}

